# serializer version: 1
# name: test_main_does_not_warn_for_arcade_hyperion_installed_source
  tuple(
    '',
    None,
    '''
      ─────────────────────────────────── Example ────────────────────────────────────
        <?xml version="1.0" encoding="UTF-8"?><state_info><Hyperion_Preset><info 
      name="Amped Up" uuid="kit-uuid" product_uuid="product-uuid" 
      version="2.0.0"/><model><HyperionLoadedSource 
      LoadedSourceUuid="loaded-source"/><HyperionFxBusSettings Name... [49 more chars]
  
    ''',
  )
# ---
# name: test_main_does_not_warn_for_arcade_looper_installed_kit
  tuple(
    '',
    None,
    '''
      ─────────────────────────────────── Example ────────────────────────────────────
        <?xml version="1.0" encoding="UTF-8"?><state_info><Looper_Preset><info 
      name="Downstream" uuid="downstream-kit" product_uuid="honey-product" 
      version="1.3.0"/></Looper_Preset></state_info>
  
    ''',
  )
# ---
# name: test_main_plugins_falls_back_to_clean_jsfx_basename
  tuple(
    '',
    None,
    '''
      ─────────────────────────────────── Example ────────────────────────────────────
      ┏━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━┳━━━━━━━━━━━━┳━━━━━━┳━━━━━━━━━━━━━━━━━━┓
      ┃ Plugin               ┃ Track # ┃ Track Name ┃ Mute ┃ Warning          ┃
      ┡━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━╇━━━━━━━━━━━━╇━━━━━━╇━━━━━━━━━━━━━━━━━━┩
      │ JS: KanakaMSEncoder1 │       1 │ (unnamed)  │      │ ❌ Not installed │
      └──────────────────────┴─────────┴────────────┴──────┴──────────────────┘
  
    ''',
  )
# ---
# name: test_main_plugins_for_project_file
  tuple(
    '',
    None,
    '''
      ─────────────────────────────────── Example ────────────────────────────────────
      ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━┳━━━━━━━━━━━━┳━━━━━━┳━━━━━━━━━━━━━━━━━━┓
      ┃ Plugin                     ┃ Track # ┃ Track Name ┃ Mute ┃ Warning          ┃
      ┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━╇━━━━━━━━━━━━╇━━━━━━╇━━━━━━━━━━━━━━━━━━┩
      │ AUi: Arcade (Output)       │       1 │ Lead Vox   │      │                  │
      │ CLAPi: Surge XT            │       1 │ Lead Vox   │      │                  │
      │ DX: Classic Compressor     │       1 │ Lead Vox   │      │                  │
      │ JS: Mid/Side Encoder       │       1 │ Lead Vox   │      │                  │
      │ JS: ReEQ                   │       1 │ Lead Vox   │      │                  │
      │ LV2: Dragonfly Hall Reverb │       1 │ Lead Vox   │      │                  │
      │ VST3: ValhallaRoom         │       1 │ Lead Vox   │ 🔇   │ ❌ Not installed │
      │ VST3: Zebra2               │       1 │ Lead Vox   │      │ ❌ Not installed │
      │ VST3: Zebra2               │       1 │ Lead Vox   │      │ ❌ Not installed │
      │ VST3: Zebra2               │       3 │ Drum Bus   │ 🔇   │ ❌ Not installed │
      └────────────────────────────┴─────────┴────────────┴──────┴──────────────────┘
  
    ''',
  )
# ---
# name: test_main_plugins_formats_jsfx_names_with_prefix
  tuple(
    '',
    None,
    '''
      ─────────────────────────────────── Example ────────────────────────────────────
      ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━┳━━━━━━━━━━━━┳━━━━━━┳━━━━━━━━━┓
      ┃ Plugin                               ┃ Track # ┃ Track Name ┃ Mute ┃ Warning ┃
      ┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━╇━━━━━━━━━━━━╇━━━━━━╇━━━━━━━━━┩
      │ JS: Loudness Meter Peak/RMS/LUFS     │       1 │ Analysis   │      │         │
      │ (Cockos)                             │         │            │      │         │
      │ JS: ReEQ                             │       1 │ Analysis   │      │         │
      └──────────────────────────────────────┴─────────┴────────────┴──────┴─────────┘
  
    ''',
  )
# ---
# name: test_main_plugins_no_args
  tuple(
    '',
    None,
    '''
      ─────────────────────────────── Song Title Here ────────────────────────────────
      ┏━━━━━━━━━━━━━━━┳━━━━━━━━━┳━━━━━━━━━━━━┳━━━━━━┳━━━━━━━━━━━━━━━━━━┓
      ┃ Plugin        ┃ Track # ┃ Track Name ┃ Mute ┃ Warning          ┃
      ┡━━━━━━━━━━━━━━━╇━━━━━━━━━╇━━━━━━━━━━━━╇━━━━━━╇━━━━━━━━━━━━━━━━━━┩
      │ VSTi: Kontakt │       1 │ (unnamed)  │      │ ❌ Not installed │
      └───────────────┴─────────┴────────────┴──────┴──────────────────┘
  
    ''',
  )
# ---
# name: test_main_plugins_reads_legacy_encoded_jsfx_metadata
  tuple(
    '',
    None,
    '''
      ─────────────────────────────────── Example ────────────────────────────────────
      ┏━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━┳━━━━━━━━━━━━┳━━━━━━┳━━━━━━━━━┓
      ┃ Plugin             ┃ Track # ┃ Track Name ┃ Mute ┃ Warning ┃
      ┡━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━╇━━━━━━━━━━━━╇━━━━━━╇━━━━━━━━━┩
      │ JS: Master Limiter │       1 │ Master     │      │         │
      └────────────────────┴─────────┴────────────┴──────┴─────────┘
  
    ''',
  )
# ---
# name: test_main_plugins_warns_for_missing_au_plugin
  tuple(
    '',
    None,
    '''
      ─────────────────────────────────── Example ────────────────────────────────────
      ┏━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━┳━━━━━━━━━━━━━━━━┳━━━━━━┳━━━━━━━━━━━━━━━━━━┓
      ┃ Plugin                  ┃ Track # ┃ Track Name     ┃ Mute ┃ Warning          ┃
      ┡━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━╇━━━━━━━━━━━━━━━━╇━━━━━━╇━━━━━━━━━━━━━━━━━━┩
      │ AUi: Captain Chords     │       1 │ Synth - Chords │      │ ❌ Not installed │
      │ (Mixed In Key LLC)      │         │                │      │                  │
      └─────────────────────────┴─────────┴────────────────┴──────┴──────────────────┘
  
    ''',
  )
# ---
# name: test_main_plugins_warns_for_missing_jsfx_plugin
  tuple(
    '',
    None,
    '''
      ─────────────────────────────────── Example ────────────────────────────────────
      ┏━━━━━━━━━━┳━━━━━━━━━┳━━━━━━━━━━━━┳━━━━━━┳━━━━━━━━━━━━━━━━━━┓
      ┃ Plugin   ┃ Track # ┃ Track Name ┃ Mute ┃ Warning          ┃
      ┡━━━━━━━━━━╇━━━━━━━━━╇━━━━━━━━━━━━╇━━━━━━╇━━━━━━━━━━━━━━━━━━┩
      │ JS: ReEQ │       1 │ EQ         │      │ ❌ Not installed │
      └──────────┴─────────┴────────────┴──────┴──────────────────┘
  
    ''',
  )
# ---
# name: test_main_plugins_warns_for_missing_vst_plugin
  tuple(
    '',
    None,
    '''
      ─────────────────────────────────── Example ────────────────────────────────────
      ┏━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━┳━━━━━━━━━━━━━━━━┳━━━━━━┳━━━━━━━━━━━━━━━━━━┓
      ┃ Plugin                  ┃ Track # ┃ Track Name     ┃ Mute ┃ Warning          ┃
      ┡━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━╇━━━━━━━━━━━━━━━━╇━━━━━━╇━━━━━━━━━━━━━━━━━━┩
      │ VSTi: Captain Chords    │       1 │ Synth - Chords │      │ ❌ Not installed │
      │ (Mixed In Key LLC)      │         │                │      │                  │
      └─────────────────────────┴─────────┴────────────────┴──────┴──────────────────┘
  
    ''',
  )
# ---
# name: test_main_raw_mode_reassembles_chunked_arcade_state
  tuple(
    '',
    None,
    '''
      ─────────────────────────────────── Example ────────────────────────────────────
        Warning: Arcade sampler "Downstream very-long-state very-long-state 
      very-long-state very-long-state very-long-state very-long-state very-long-state 
      very-long-state very-long-state very-long-state very-long-state very-long-state 
      very-long-state very-long-state very-long-state very-long-state very-long-state 
      very-long-state very-long-state very-long-state " on track 1 "" is not installed
      locally (kit UUID: downstream-kit)
        <?xml version="1.0" encoding="UTF-8"?><state_info><Looper_Preset><info 
      name="Downstream very-long-state very-long-state very-long-state very-long-state
      very-long-state very-long-state very-long-state very-long-state very-long-state 
      very-lon... [267 more chars]
  
    ''',
  )
# ---
# name: test_main_raw_mode_sections
  tuple(
    '',
    None,
    '''
      ─────────────────────────────────── Example ────────────────────────────────────
        Warning: Plugin "JS: Side Encoder" on track 1 "" does not appear to be 
      installed locally
        Warning: Plugin "VST3: Zebra2" on track 1 "" does not appear to be installed 
      locally
        more
        clap
        dx
        jsf
        lv2
        valid
  
    ''',
  )
# ---
# name: test_main_warns_for_arcade_hyperion_missing_source
  tuple(
    '',
    None,
    '''
      ─────────────────────────────────── Example ────────────────────────────────────
        Warning: Arcade instrument "Amped Up" on track 1 "Bass note kit" references 
      missing source content: missing-source
        Warning: Arcade instrument "Amped Up" on track 1 "Bass note kit" has an 
      internal "error" state in its saved plugin data
        <?xml version="1.0" encoding="UTF-8"?><state_info><Hyperion_Preset><info 
      name="Amped Up" uuid="kit-uuid" product_uuid="product-uuid" 
      version="2.0.0"/><model><HyperionLoadedSource 
      LoadedSourceUuid="missing-source"/><HyperionFxBusSettings Nam... [50 more chars]
  
    ''',
  )
# ---
# name: test_main_warns_for_arcade_looper_missing_kit
  tuple(
    '',
    None,
    '''
      ─────────────────────────────────── Example ────────────────────────────────────
        Warning: Arcade sampler "Downstream" on track 1 "Rhythm" is not installed 
      locally (kit UUID: downstream-kit)
        <?xml version="1.0" encoding="UTF-8"?><state_info><Looper_Preset><info 
      name="Downstream" uuid="downstream-kit" product_uuid="honey-product" 
      version="1.3.0"/></Looper_Preset></state_info>
  
    ''',
  )
# ---
